@@ -137,6 +137,10 @@ IN DEVELOPMENT
 
   TESTING:
 
+    * -Dlock when passed to the selftest (e.g. ``bzr -Dlock selftest``) will
+      cause mismatched physical locks to cause test errors rather than just
+      reporting to the screen. (Robert Collins)
+
     * New -Dselftest_debug flag disables clearing of the debug flags during
       tests.  This is useful if you want to use e.g. -Dhpss to help debug a
       failing test.  Be aware that using this feature is likely to cause
